--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyterlab/application": "^3.1.0"
+    "@jupyterlab/application": "^3.1.0",
+    "@jupyterlab/console": "^3.6.3"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.1.0",
